--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 /* Stylesheets and Google fonts import */
 @import url("font-awesome.css");
 @import url("animations.css");
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic);
-@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext);
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 	margin: 0;
 	padding: 0;
@@ -147,7 +146,7 @@ h6{
 	color:#333333;
 	font-weight:400;
 	line-height:1.5em;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Lato';
 }
 h1{
 	font-size:36px;
@@ -191,7 +190,7 @@ blockquote p{
 	white-space:normal;
 	font-style:italic;
 	font-size:20px;
-	font-family: Georgia, serif;
+	font-family: 'Lato';
 }
 blockquote cite{
 	color:#ffffff;
@@ -225,7 +224,7 @@ p.drop-caps:first-child:first-letter {
     margin-right: 5px;
     padding: 4px;
     font-size: 75px;
-	font-family:Georgia, serif;
+	font-family: 'Lato';
     line-height: 60px;
 }
 p.drop-caps.secondary:first-child:first-letter {
@@ -326,7 +325,7 @@ address.ico span{
 	padding-left:20px;
 }
 .cursive{
-	font-family: Georgia, serif;
+	font-family: 'Lato';
 	font-style:italic;
 	text-transform:none;
 	font-weight:400;
@@ -601,7 +600,7 @@ body{
 	color:#666666;
 	font-size:13px;
 	font-weight:400;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Lato';
 	line-height:20px;
 	background-attachment:fixed;
 }
@@ -659,14 +658,14 @@ body.boxed .body .site-header, body.boxed .body .main-menu-wrapper{
 	padding:0 20px;
 	line-height:30px;
 	text-decoration:none;
-	border-right:1px solid rgba(0,0,0,.1);
+	/*border-right:1px solid rgba(0,0,0,.1);*/
 	color: #fff;
 }
 .horiz-nav > li > a:hover{
 	background:rgba(0,0,0,.05)
 }
 .horiz-nav > li:first-child > a{
-	border-left:1px solid rgba(0,0,0,.1);
+	/*border-left:1px solid rgba(0,0,0,.1);*/
 }
 .horiz-nav a{
 	text-decoration:none;
@@ -678,7 +677,7 @@ body.boxed .body .site-header, body.boxed .body .main-menu-wrapper{
 	border-right:0;
 }
 .contact-info-blocks{
-	text-align:right;
+	/*text-align:right;*/
 }
 .contact-info-blocks > div{
 	display:inline-block;
@@ -693,8 +692,8 @@ body.boxed .body .site-header, body.boxed .body .main-menu-wrapper{
 	padding-right:0;
 }
 .contact-info-blocks > div > span{
-	display:block;
-	font-family: 'Montserrat', sans-serif;
+	/*display:block;*/
+	font-family: 'Lato';
 	font-size:16px;
 	color:#666;
 }
@@ -708,14 +707,13 @@ body.boxed .body .site-header, body.boxed .body .main-menu-wrapper{
 }
 .main-menu-wrapper{
 	display:block;
-	position:relative;
-	background:#fff;
+	/*position:relative;*/
+	background-color:rgba(229, 120, 21, 0.11);
 	z-index:6;
 	width:100%;
 	-webkit-box-shadow:0 1px 2px rgba(0,0,0,.1);
 	-moz-box-shadow:0 1px 2px rgba(0,0,0,.1);
 	box-shadow:0 1px 2px rgba(0,0,0,.1);
-	background:#f8f8f8;
 }
 .navigation{
 	height:50px;
@@ -740,9 +738,10 @@ body.boxed .body .site-header, body.boxed .body .main-menu-wrapper{
 	border-left:1px solid rgba(0,0,0,.05);
 }
 .navigation ul > li:hover > a, .navigation ul > li.current_menu_item > a{
-	border-top-width:3px;
-	border-top-style:solid;
-	padding:12px 22px 15px 22px;
+	/*border-width:1px;
+	border-style:solid;*/
+	/*padding:12px 22px 15px 22px;
+	*/
 	background:#fff;
 }
 .navigation > ul > li ul{
@@ -759,6 +758,9 @@ body.boxed .body .site-header, body.boxed .body .main-menu-wrapper{
 }
 .navigation > ul > li:hover ul{
 	display:block;
+}
+.navigation > ul > li:hover {
+	background-color: #E57815;
 }
 .navigation > ul > li > ul li{
 	line-height: normal;
@@ -797,10 +799,11 @@ body.boxed .body .site-header, body.boxed .body .main-menu-wrapper{
 .sticky-wrapper{
 	max-height:50px;
 }
+.is-sticky .main-menu-wrapper a{ color: #fff;}
 .is-sticky .main-menu-wrapper{
 	z-index:1000;
 	min-height:50px;
-	background-color:#ffffff;
+	background-color:#E57815;
 	-webkit-box-shadow:0 1px 0 rgba(0,0,0,.1);
 	-moz-box-shadow:0 1px 0 rgba(0,0,0,.1);
 	box-shadow:0 1px 0 rgba(0,0,0,.1);
@@ -874,18 +877,20 @@ html[xmlns] .slides {
 .flex-caption{
 	display:none;
 	margin:0 auto;
-	margin-top:110px;
 	text-align:center;
-	width:230px;
 	background:#ffffff;
-	border-top:3px solid rgba(0,0,0,.8);
-	position:absolute;
-	right:50%;
+	border:1px solid rgba(0,0,0,.3);
+	/*position:absolute; */
 	margin-right:-500px;
 	position:relative;
-	-webkit-border-radius:3px;
+	/*-webkit-border-radius:3px;
 	-moz-border-radius:3px;
-	border-radius:3px;
+	border-radius:3px;*/
+
+  /* margin-top: 110px; */
+  width: 40%;
+  /* position: absolute; */
+  right: 43.2%;
 }
 .flex-caption strong.title{
 	font-size:20px;
@@ -901,9 +906,9 @@ html[xmlns] .slides {
 	color:#999999;
 }
 .flex-caption .btn{
-	-webkit-border-radius:0 0 3px 3px;
+	/*-webkit-border-radius:0 0 3px 3px;
 	-moz-border-radius:0 0 3px 3px;
-	border-radius:0 0 3px 3px;
+	border-radius:0 0 3px 3px; */
 	margin-top:10px;
 }
 .flex-caption .fa-caret-down{
@@ -994,7 +999,7 @@ html[xmlns] .slides {
 	width:25px;
 	height:25px;
   	display: inline-block;
-  	font-family: FontAwesome;
+  	font-family: 'Lato';
   	font-style: normal;
   	font-weight: normal;
   	-webkit-font-smoothing: antialiased;
@@ -1002,7 +1007,7 @@ html[xmlns] .slides {
   	text-decoration:none;
 	display:none;
 	text-align:center;
-	border-radius:5px;
+	/*border-radius:5px;*/
 }
 .flexslider .flex-prev{
 	left:10px;
@@ -1071,19 +1076,19 @@ html[xmlns] .slides {
 	float:left;
 }
 .site-search-module{
-	position:absolute;
+	/*position:absolute;*/
 	z-index:8;
-	height:190px;
+	/*height:190px;*/
 	bottom:-107px;
 	left:0;
 	width: 100%;
 }
 .site-search-module-inside{
 	padding:15px 15px 0;
-	height:175px;
+	height:260px;
 	background:#f8f8f8;
-	border-top:3px solid rgba(0,0,0,.8);
-	border-radius:15px 15px 0 0
+	border-top:1px solid rgba(0,0,0,.8);
+	/*border-radius:15px 15px 0 0*/
 }
 .site-search-module-inside .btn{
 	padding-top:14px;
@@ -1202,6 +1207,7 @@ html[xmlns] .slides {
 	background:#fff;
 	font-weight:700;
 }
+.property-info{height: 154px;}
 .property-info, .agent-info{
 	padding:15px;
 	display:block;
@@ -1239,17 +1245,17 @@ html[xmlns] .slides {
 	display:inline-block;
 	background:#666;
 	color:#fff;
-	-webkit-border-radius:3px;
+	/*-webkit-border-radius:3px;
 	-moz-border-radius:3px;
-	border-radius:3px;
+	border-radius:3px;*/
 	height:30px;
 }
 .price strong, .counts strong{
 	background:rgba(0,0,0,.1);
 	padding:0 7px;
-	-webkit-border-radius:3px 0 0 3px;
+	/*-webkit-border-radius:3px 0 0 3px;
 	-moz-border-radius:3px 0 0 3px;
-	border-radius:3px 0 0 3px;
+	border-radius:3px 0 0 3px;*/
 	line-height:30px;
 	height:30px;
 	display: inline-block;
@@ -1280,31 +1286,34 @@ html[xmlns] .slides {
 	text-decoration:none;
 }
 .block-heading{
-	background:#efefef;
-	-webkit-border-radius:3px;
+	background:#231E1B;
+	/*-webkit-border-radius:3px;
 	-moz-border-radius:3px;
-	border-radius:3px;
+	border-radius:3px;*/
 	height:50px;
 	margin-bottom:30px;
 }
 .block-heading h4{
+	background:#231E1B !important;
 	line-height:50px;
 	color:#ffffff;
 	display:inline-block;
 	padding-right:20px;
-	-webkit-border-radius:3px 0 0 3px;
+	/*-webkit-border-radius:3px 0 0 3px;
 	-moz-border-radius:3px 0 0 3px;
-	border-radius:3px 0 0 3px;
+	border-radius:3px 0 0 3px;*/
+	padding-left: 10px;
 }
+
 .block-heading .heading-icon{
 	background:rgba(0,0,0,.1);
 	width:50px;
 	text-align:center;
 	margin-right:20px;
 	display:inline-block;
-	-webkit-border-radius:3px 0 0 3px;
+	/*-webkit-border-radius:3px 0 0 3px;
 	-moz-border-radius:3px 0 0 3px;
-	border-radius:3px 0 0 3px;
+	border-radius:3px 0 0 3px;*/
 	position:relative;
 }
 .block-heading .heading-icon .icon-design{
@@ -1394,15 +1403,16 @@ html[xmlns] .slides {
 	color:#999;
 }
 .site-footer{
-	background-color:#f8f8f8;
+	background-color:rgba(229, 120, 21, 0.11);
 	padding:30px 0 0 0;
 	box-shadow:inset 0 2px 2px rgba(0,0,0,.07);
 }
 .site-footer-bottom{
-	background-color:#eee;
+	background-color:#E57815;
 	border-top:1px solid #e1e1e1;
 	padding:20px 0;
 	font-size:12px;
+	color: white;
 }
 .site-footer-bottom p{
 	margin-bottom:0;
@@ -1415,7 +1425,7 @@ html[xmlns] .slides {
 	text-align:right;
 }
 .site-footer-bottom .social-icons a{
-	background:#666;
+	/*background:#666;*/
 	color:#fff;
 	border-radius:50%;
 	width:20px;
@@ -1532,7 +1542,7 @@ html[xmlns] .slides {
 .location{
 	font-size:60%;
 	color:#999;
-	font-family: 'Open Sans', sans-serif!important;
+	font-family: 'Lato';
 	font-style:italic;
 }
 .location > i{
@@ -1708,7 +1718,7 @@ html[xmlns] .slides {
 	width: 46%;
 	float: left;
 	border: 1px solid #eee;
-	border-radius: 5px;
+	/*border-radius: 5px;*/
 	padding: 20px;
 	padding-top:10px;
 	position: relative;
@@ -1810,9 +1820,9 @@ html[xmlns] .slides {
 	margin-bottom:40px;
 }
 .widget .widgettitle{
-	border-bottom:1px solid #efefef;
+	/*border-bottom:1px solid #efefef;
 	margin-bottom:25px;
-	padding-bottom:5px;
+	padding-bottom:5px; */
 	text-transform:uppercase;
 	font-size:16px;
 }
@@ -1833,9 +1843,9 @@ html[xmlns] .slides {
 	margin-bottom:7px;
 	padding:2px 8px;
 	border:1px solid #eeeeee;
-	-webkit-border-radius:3px;
+	/*-webkit-border-radius:3px;
 	-moz-border-radius:3px;
-	border-radius:3px;
+	border-radius:3px;*/
 	background:#f8f8f8;
 	font-size:12px;
 	text-decoration:none;
@@ -1915,8 +1925,8 @@ html[xmlns] .slides {
 	display:inline-block;
 	margin:0 5px 10px 0;
 	background:#f8f8f8;
-	-webkit-border-radius:3px;
-	border-radius:3px;
+	/*-webkit-border-radius:3px;
+	border-radius:3px;*/
 }
 .additional-amenities > span.navailable i{
 	color:#999;
@@ -2003,8 +2013,8 @@ html[xmlns] .slides {
 	bottom:17px;
 	display:none;
 	padding:5px 12px;
-	-webkit-border-radius:3px;
-	border-radius:3px;
+	-webkit-border-radius:23px;
+	border-radius:23px;
 	background:rgba(0,0,0,.7);
 	color:#ffffff;
 }
@@ -2336,16 +2346,16 @@ span.progress-bar-tooltip {
 	right: 5px;
 	display: block;
 	padding: 4px 8px;
-	-webkit-border-radius: 3px;
+	/*-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
-	border-radius: 3px;
+	border-radius: 3px;*/
 	background-color: #333;
 	color: #FFF;
 	font-size: 11px;
 	line-height: 15px;
 	opacity: 0;
 	filter: alpha(opacity=0);
-	-o-border-radius: 3px;
+	/*-o-border-radius: 3px;*/
 }
 span.progress-bar-tooltip:after {
 	position: absolute;
@@ -2374,7 +2384,7 @@ span.progress-bar-tooltip:after {
 	color:#999999;
 	font-size:15px;
 	margin-top:10px;
-	font-family: 'Volkhov', serif;
+	font-family: 'Lato';
 	font-style:italic
 }
 .counters .timer{
@@ -2731,7 +2741,7 @@ span.progress-bar-tooltip:after {
 		height:auto;
 		position:absolute;
 		width:100%;
-		background:#eee;
+		background-color:rgba(229, 120, 21, 0.11);
 		display:none;
 		z-index:9999;
 	}
@@ -3026,3 +3036,168 @@ span.progress-bar-tooltip:after {
 @media all and (-webkit-min-device-pixel-ratio: 1.5) {
 	
 }
+#option-fixed{
+	float: right;
+	z-index: 100;
+}
+.label {padding: 12px 12px;}
+
+.property-amenities [class^="icon-"] {
+  display: inline-block;
+  height: 20px;
+  margin-right: 2px;
+  vertical-align: -5px;
+  width: 20px;
+}
+
+	.ps-mini-desc .type,
+	.ps-mini-desc .price,
+	.ps-mini-desc .status {
+		display: inline-block;
+		font-size: 13px;
+		min-width:115px;
+		text-align:center;
+		max-width:115px;
+		padding: 6px 13px 8px;
+		position: absolute;
+		text-decoration: none;
+		
+	}
+	
+	.ps-desc .type,
+	.ps-desc .price,
+	.ps-desc .status {
+		display: inline-block;
+		font-size: 13px;
+		min-width:115px;
+		max-width:115px;
+		padding: 6px 13px 8px;
+		text-align:center;
+		position: absolute;
+		text-decoration: none;
+	}
+
+	.ps-mini-desc .type {
+		background:#010101;
+		bottom: 11px;
+		left: 240px;
+		color: #ffffff;
+		text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	}
+	
+	.ps-mini-desc .price {
+		bottom: 11px;
+		left: 125px;
+	}
+	
+	.ps-mini-desc .status {
+		bottom: 11px;
+		left: 10px;
+	}      
+
+	.ps-desc .type {
+		background:#010101;
+		bottom: -34px;
+		left: 0;
+		color: #ffffff;
+		text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+			-webkit-border-radius:0 0 0 10px;
+			-moz-border-radius: 0 0 0 10px;
+			border-radius: 0 0 0 10px;
+	}
+
+	.ps-desc .price {
+		bottom: -34px;
+		left: 115px;
+	}
+
+	.ps-desc .status {
+		bottom: -34px;
+		left: 230px;
+			-webkit-border-radius:0 0 10px 0;
+			-moz-border-radius: 0 0 10px 0;
+			border-radius: 0 0 10px 0;
+	}  
+	 
+	#support a,
+	.boxes_img .status_type,
+	.ps-mini-desc .status,
+	.ps-desc .status {
+		color: #ffffff;
+		text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	}
+
+	.fhmm .boxes {
+		margin-bottom:0
+	}
+	
+	.property-amenities .icon-bed {
+		background: url(../images/bed.png) no-repeat scroll left center;
+	}
+	
+	.property-amenities .icon-bath {
+		background: url(../images/bath.png) no-repeat scroll left center;
+	}
+	
+	.property-amenities .icon-garage {
+		background: url(../images/garage.png) no-repeat scroll left center;
+	}
+	
+	.property-amenities .icon-furnished {
+		background: url(../images/furnished.png) no-repeat scroll left center;
+	}
+
+	.property-amenities .icon-pool {
+		background: url(../images/pool.png) no-repeat scroll left center;
+	}
+		
+	.property-amenities .icon-sqft {
+		background: url(../images/sqft.png) no-repeat scroll left center;
+	}
+	
+	.property-amenities [class^="icon-"] {
+		display: inline-block;
+		height: 20px;
+		margin-right: 2px;
+		vertical-align: -5px;
+		width: 20px;
+	}
+
+	.boxes {
+		padding:10px;
+		position:relative;
+		overflow:hidden;
+		margin-bottom:30px;
+ 		border:1px solid #F0F0F0;  
+		background:#ffffff;
+		-moz-box-box-shadow:2px 2px 1px  RGBa(0,0,0, 0.035);
+		-webkit-box-shadow:2px 2px 1px  RGBa(0,0,0, 0.035);
+		box-shadow:2px 2px 1px  RGBa(0,0,0, 0.035);		
+	}   
+	
+	.boxes .title {
+		text-transform:none !important
+	}
+	
+	.boxes_img {
+		position:relative;
+	}
+	
+	.boxes_img .box_type {
+		min-width:60px; 
+		text-align:center;
+		bottom:0;
+		padding:1px 13px; 
+		z-index:2;
+		position:absolute;
+	}
+
+	.boxes_img .status_type {
+		min-width:60px; 
+		text-align:center;
+		z-index:2;
+		bottom:0;
+		right:0;
+		padding:1px 13px; 
+		position:absolute;
+	}
