--- a/css/style.css
+++ b/css/style.css
@@ -1126,7 +1126,7 @@ html[xmlns] .slides {
 .featured-block img{
 	width:50%;
 	display:inline-block;
-	border-radius:100%;
+	/*border-radius:100%;*/
 	margin-bottom:10px;
 }
 .featured-block p{
